# ECToolkits

./: .buildinfo  .gitignore  DEVEL.md  README.md  TODO.md  genindex.html  intro.html  objects.inv  py-modindex.html  pyproject.toml  pytest.ini  search.html  searchindex.js  setup.py  template.mustache
.github/workflows/: ci.yml  doc.yml  pub-pypi.yml
_api/: ectoolkits.analysis.acidity.html  ectoolkits.analysis.atom_density.html  ectoolkits.analysis.band_align.html  ectoolkits.analysis.dielectric_constant.html  ectoolkits.analysis.disdeg.html  ectoolkits.analysis.finite_size_correction.html  ectoolkits.analysis.get_Surface_Indirect_PT.html  ectoolkits.analysis.get_Surface_PT_CV.html  ectoolkits.analysis.html  ectoolkits.analysis.proton_transfer_cv.html  ectoolkits.analysis.reweight.html  ectoolkits.analysis.rutile110.html  ectoolkits.analysis.uncertainty.html  ectoolkits.analysis.water.html  ectoolkits.html  ectoolkits.log.html  ectoolkits.main.html  ectoolkits.matplotlibstyle.html  ectoolkits.plots.band_align.html  ectoolkits.plots.dpmd.html  ectoolkits.plots.html  ectoolkits.structures.html  ectoolkits.structures.interface.html  ectoolkits.structures.rutile110.html  ectoolkits.structures.slab.html  ectoolkits.structures.tools.html  ectoolkits.utils.html  ectoolkits.utils.math.html  ectoolkits.utils.rutile110.html  ectoolkits.utils.utils.html  ectoolkits.utils.vasp.html  modules.html
_modules/: index.html
_modules/ectoolkits/: log.html  main.html
_sources/: intro.md
_sources/_api/: ectoolkits.analysis.acidity.rst  ectoolkits.analysis.atom_density.rst  ectoolkits.analysis.band_align.rst  ectoolkits.analysis.dielectric_constant.rst  ectoolkits.analysis.disdeg.rst  ectoolkits.analysis.finite_size_correction.rst  ectoolkits.analysis.get_Surface_Indirect_PT.rst  ectoolkits.analysis.get_Surface_PT_CV.rst  ectoolkits.analysis.proton_transfer_cv.rst  ectoolkits.analysis.reweight.rst  ectoolkits.analysis.rst  (+21 more)
docs/: references.html
ectoolkits/: __init__.py  log.py  main.py
jupyter-book/: _config.yml  _toc.yml  references.bib
python/: math_utils.py  utils.py  xyz2rdf.py
tests/: tio2-water-cross-1.cif  tio2-water-cross-2.cif  tio2-water.cif
toolkit/: main.py  slab.py  utils.py
(+157 files in other folders)
