[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ECToolkits"
version = "0.4.3"
authors = [
{name = "Yong-Bin Zhuang", email = "robinzhuang@outlook.com"}
]
license = {file = "LICENSE"}
readme = "README.md"
description = "ElectroChemical Toolkit(ECToolkit), the package to calculate electrochemical results from atomistic simulations."

classifiers = [
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: GNU Library or Lesser General Public License (LGPL)"
]
requires-python = ">=3.8"
dependencies = [
    "numpy <= 1.24.4",
    # the gsd > 3.2.1 use numpy 2.0.0 .. that is not support python 3.8
    "gsd <= 3.2.1",
    "matplotlib >= 3.3.2",
    "ase >= 3.20.1",
    "cp2kdata >= 0.6.1",
    "pandas",
    "MDAnalysis >= 2.1.0",
    "dpdispatcher",
    "cp2k-input-tools",
    "pyyaml"
]

[tool.setuptools.packages.find]
include = ["ectoolkits*"]

[tool.setuptools.package-data]
ectoolkits = ["matplotlibstyle/*.mplstyle"]

[project.entry-points.console_scripts]
eckits = "ectoolkits.cli.cmd:cli"
